--- a/l10n/po/ja_JP/_guides/quarkus-intro.adoc.po
+++ b/l10n/po/ja_JP/_guides/quarkus-intro.adoc.po
@@ -20,24 +20,24 @@ msgstr ""
 #: upstream/_guides/quarkus-intro.adoc:1
 #, no-wrap
 msgid "What is Quarkus"
-msgstr "Quarkusとは"
+msgstr "Quarkus とは"
 
 #.  tag::intro[]
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:19
 msgid "Quarkus is a Cloud Native, Container First framework for writing Java applications."
-msgstr "Quarkusは、Javaアプリケーションを書くためのクラウドネイティブ、コンテナーファーストのフレームワークです。"
+msgstr "Quarkus は、Java アプリケーションを書くためのクラウドネイティブ、コンテナーファーストのフレームワークです。"
 
 #. type: Labeled list
 #: upstream/_guides/quarkus-intro.adoc:21
 #, no-wrap
 msgid "Container First"
-msgstr "コンテナーファースト"
+msgstr "コンテナー初"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:23
 msgid "Minimal footprint Java applications optimized for running in containers"
-msgstr "コンテナーでの実行に最適化されたミニマムフットプリントのJavaアプリケーション"
+msgstr "コンテナーでの実行に最適化されたミニマムフットプリントの Java アプリケーション"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:23
@@ -48,112 +48,100 @@ msgstr "クラウドネイティブ"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:25
-#, fuzzy
 msgid "Embraces 12 factor architecture in environments like Kubernetes"
-msgstr "Kubernetesのような環境で12ファクターアーキテクチャを採用"
+msgstr "Kubernetes のような環境で 12 ファクターアーキテクチャを採用"
 
 #. type: Labeled list
 #: upstream/_guides/quarkus-intro.adoc:25
 #, no-wrap
 msgid "Unify imperative and reactive"
-msgstr "命令型なものとリアクティブ型を統一する"
+msgstr "命令型とリアクティブ型を統一"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:27
-#, fuzzy
 msgid "Brings under one programming model non blocking and imperative styles of development"
-msgstr "ノンブロッキングと命令型の開発スタイルを1つのプログラミングモデルにまとめました。"
+msgstr "ノンブロッキングと命令型の開発スタイルを 1 つのプログラミングモデルにまとめました。"
 
 #. type: Labeled list
 #: upstream/_guides/quarkus-intro.adoc:27
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Standards-based"
-msgstr "標準化された"
+msgstr "標準ベース"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:29
-#, fuzzy
 msgid "Based on the standards and the libraries you love and use (RESTEasy, Hibernate, Netty, Eclipse Vert.x, Apache Camel...)"
-msgstr "標準や愛用しているライブラリ(RESTEasy、Hibernate、Netty、Eclipse Vert.x、Apache Camel...)に基づいています。"
+msgstr "標準ライブラリーや愛用しているライブラリ－ (RESTEasy、Hibernate、Netty、Eclipse Vert.x、Apache Camel...)"
 
 #. type: Labeled list
 #: upstream/_guides/quarkus-intro.adoc:29
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Microservice First"
-msgstr "マイクロサービスファースト"
+msgstr "マイクロサービス初"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:31
-#, fuzzy
 msgid "Brings lightning fast startup time to Java applications"
-msgstr "Javaアプリケーションの起動時間を大幅に短縮"
+msgstr "Java アプリケーションの起動時間を大幅に短縮"
 
 #. type: Labeled list
 #: upstream/_guides/quarkus-intro.adoc:31
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Extreme productivity"
 msgstr "極限の生産性"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:33
-#, fuzzy
 msgid "Instant hot code replacement: don't allow build, deploy, boot delays disrupt your flow"
-msgstr "インスタントホットコードの置き換え: ビルド、デプロイ、ブートの遅延がフローを混乱させないようにする"
+msgstr "インスタントなホットコードの置き換え: ビルド、デプロイ、ブートの遅延がフローを混乱させないようにします"
 
 #. type: Labeled list
 #: upstream/_guides/quarkus-intro.adoc:33
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Developer Joy"
-msgstr "開発者の喜び"
+msgstr "開発者が満足できる要素"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:35
-#, fuzzy
 msgid "Development-centric experience without compromises to bring your amazing applications to life in no time"
 msgstr "妥協のない開発中心の体験で、素晴らしいアプリケーションを短時間で実現"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:37
-#, fuzzy
 msgid "All under one framework."
-msgstr "すべては一つの枠組みの下で。"
+msgstr "すべてを一つの枠組みの下で。"
 
 #.  end::intro[]
 #. type: Title ==
 #: upstream/_guides/quarkus-intro.adoc:40
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Scratch pad"
 msgstr "スクラッチパッド"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:44
-#, fuzzy
 msgid "Quarkus believes in developer Joy."
-msgstr "Quarkusは開発者のジョイを信じています。"
+msgstr "Quarkus は、開発者の満足度を重要視しています。"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:48
-#, fuzzy
 msgid "It unifies imperative and reactive.  It is a Microservice first toolkit."
-msgstr "インプライベーティブとリアクティブを統一しています。マイクロサービスファーストのツールキットです。"
+msgstr "インプライベーティブとリアクティブを統一しています。これは、マイクロサービス初のツールキットです。"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:51
-#, fuzzy
 msgid "Standards based Quarkus brings all the standards and frameworks you love and use: RESTEasy, Hibernate, Netty, vert.x, Camel...)"
-msgstr "標準ベースのQuarkusは、あなたが好きで使っているすべての標準やフレームワークを提供します。RESTEasy、Hibernate、Netty、vert.x、Camelなどです。)"
+msgstr "標準ベースの Quarkus は、お好みで使用されているすべての標準やフレームワークを提供します (RESTEasy、Hibernate、Netty、vert.x、Camelなど)"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:53
-#, fuzzy
 msgid "Imperative and Reactive"
-msgstr "強迫的と反応的"
+msgstr "命令型とリアクティブ"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:55
-#, fuzzy
 msgid "ahead-of-time native binary (executable binary)"
-msgstr "先行ネイティブバイナリー"
+msgstr "先行ネイティブバイナリー (実行可能バイナリー)"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:57
@@ -167,13 +155,11 @@ msgstr "モジュラー"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:59
-#, fuzzy
 msgid "Substrate VM native"
-msgstr "基板 VM ネイティブ"
+msgstr "Substrate VM ネイティブ"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:61
-#, fuzzy
 msgid "Seamlessly build container optimal"
 msgstr "シームレスに最適なコンテナーを構築"
 
@@ -184,60 +170,50 @@ msgstr "コンテナーとの親和性"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:65
-#, fuzzy
 msgid "Container optimal"
-msgstr "コンテナーの最適化"
+msgstr "コンテナーに最適"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:67
-#, fuzzy
 msgid "low memory"
-msgstr "ローメモリー"
+msgstr "低メモリー"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:68
-#, fuzzy
 msgid "low startup time"
-msgstr "低起動時間"
+msgstr "短い起動時間"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:69
-#, fuzzy
 msgid "ahead of time optimal"
 msgstr "先行最適"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:71
-#, fuzzy
 msgid "Unifying Imperative and Reactive under one framework."
-msgstr "ImperativeとReactiveを一つのフレームワークで統一する。"
+msgstr "命令型とリアクティブを 1 つのフレームワークで統一。"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:73
-#, fuzzy
 msgid "Usability"
-msgstr "ユーザービリティ"
+msgstr "ユーザービリティー"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:74
-#, fuzzy
 msgid "easy to use"
 msgstr "使いやすい"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:75
-#, fuzzy
 msgid "productive environment"
-msgstr "せいさんかんきょう"
+msgstr "生産環境"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:76
-#, fuzzy
 msgid "hot reload"
 msgstr "ホットリロード"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:78
-#, fuzzy
 msgid "Standards based"
-msgstr "標準化された"
+msgstr "標準ベース"
