--- a/l10n/po/ja_JP/_versions/1.7/guides/quarkus-intro.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/quarkus-intro.adoc.po
@@ -60,24 +60,24 @@ msgstr "命令型なものとリアクティブ型を統一する"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:27
 msgid "Brings under one programming model non blocking and imperative styles of development"
-msgstr ""
+msgstr "ノンブロッキングと命令型の開発スタイルを 1 つのプログラミングモデルにまとめました。"
 
 #. type: Labeled list
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:27
 #, no-wrap
 msgid "Standards-based"
-msgstr ""
+msgstr "標準ベース"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:29
 msgid "Based on the standards and the libraries you love and use (RESTEasy, Hibernate, Netty, Eclipse Vert.x, Apache Camel...)"
-msgstr ""
+msgstr "標準ライブラリーや愛用しているライブラリ－ (RESTEasy、Hibernate、Netty、Eclipse Vert.x、Apache Camel...)"
 
 #. type: Labeled list
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:29
 #, no-wrap
 msgid "Microservice First"
-msgstr ""
+msgstr "マイクロサービス初"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:31
@@ -88,12 +88,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:31
 #, no-wrap
 msgid "Extreme productivity"
-msgstr ""
+msgstr "極限の生産性"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:33
 msgid "Instant hot code replacement: don't allow build, deploy, boot delays disrupt your flow"
-msgstr ""
+msgstr "インスタントなホットコードの置き換え: ビルド、デプロイ、ブートの遅延がフローを混乱させないようにします"
 
 #. type: Labeled list
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:33
@@ -104,39 +104,39 @@ msgstr "開発者満足"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:35
 msgid "Development-centric experience without compromises to bring your amazing applications to life in no time"
-msgstr ""
+msgstr "妥協のない開発中心の体験で、素晴らしいアプリケーションを短時間で実現"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:37
 msgid "All under one framework."
-msgstr ""
+msgstr "すべてを一つの枠組みの下で。"
 
 #.  end::intro[]
 #. type: Title ==
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:40
 #, no-wrap
 msgid "Scratch pad"
-msgstr ""
+msgstr "スクラッチパッド"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:44
 msgid "Quarkus believes in developer Joy."
-msgstr ""
+msgstr "Quarkus は、開発者の満足度を重要視しています。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:48
 msgid "It unifies imperative and reactive.  It is a Microservice first toolkit."
-msgstr ""
+msgstr "インプライベーティブとリアクティブを統一しています。これは、マイクロサービス初のツールキットです。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:51
 msgid "Standards based Quarkus brings all the standards and frameworks you love and use: RESTEasy, Hibernate, Netty, vert.x, Camel...)"
-msgstr ""
+msgstr "標準ベースの Quarkus は、お好みで使用されているすべての標準やフレームワークを提供します (RESTEasy、Hibernate、Netty、vert.x、Camelなど)"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:53
 msgid "Imperative and Reactive"
-msgstr ""
+msgstr "命令型とリアクティブ"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:55
@@ -161,7 +161,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:61
 msgid "Seamlessly build container optimal"
-msgstr ""
+msgstr "シームレスに最適なコンテナーを構築"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:63
@@ -171,7 +171,7 @@ msgstr "コンテナーとの親和性"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:65
 msgid "Container optimal"
-msgstr ""
+msgstr "コンテナーに最適"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:67
@@ -191,12 +191,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:71
 msgid "Unifying Imperative and Reactive under one framework."
-msgstr ""
+msgstr "命令型とリアクティブを 1 つのフレームワークで統一。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:73
 msgid "Usability"
-msgstr ""
+msgstr "ユーザービリティー"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:74
@@ -216,4 +216,4 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/quarkus-intro.adoc:78
 msgid "Standards based"
-msgstr ""
+msgstr "標準ベース"
