Add machine translation

--- a/l10n/po/ja_JP/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.0.0.Alpha1 released - Vert.x 4, MicroProfile 4 and Continuous Testing'\n"
@@ -34,38 +34,50 @@ msgid ""
 "author: gsmet\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus 2.0.0.Alpha1リリース - Vert.x 4、MicroProfile 4、Continuous Testing'\n"
+"date: 2021-04-22\n"
+"tags: release\n"
+"synopsis: この最初のアルファリリースで、私たちは新しいメジャー製品であるQuarkus 2.0につながる旅を始めます。\n"
+"author: gsmet\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:11
+#, fuzzy
 msgid "It is with a bit of emotion that I announce today the release of Quarkus 2.0.0.Alpha1."
-msgstr ""
+msgstr "本日、Quarkus 2.0.0.Alpha1のリリースを少しの感慨を持って発表したいと思います。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:14
+#, fuzzy
 msgid "As previously presented, Quarkus 2.0 is in the continuity of Quarkus 1.x and won't require too many changes on your side.  But we consider it a major release as major parts of our infrastructure have changed:"
-msgstr ""
+msgstr "以前に紹介したように、Quarkus 2.0はQuarkus 1.xの連続性の中にあり、あなたの側ではあまり多くの変更を必要としません。しかし、インフラの主要部分が変更されたため、メジャーリリースと考えています。"
 
 #. type: Title ===
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:16
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:36
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Vert.x 4"
-msgstr ""
+msgstr "Vert.x 4"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:17
+#, fuzzy
 msgid "Eclipse MicroProfile 4 and major changes in the SmallRye components"
-msgstr ""
+msgstr "Eclipse MicroProfile 4とSmallRyeコンポーネントの主な変更点"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:20
+#, fuzzy
 msgid "2.0 is also a good moment to bring new features that, we believe, could change your daily coding for the better.  The first one to come to life is called Continuous Testing."
-msgstr ""
+msgstr "2.0は、日々のコーディングをより良いものに変えてくれると信じている新機能を提供する良い機会でもあります。最初に登場したのは、「継続的テスト」と呼ばれるものです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:24
+#, fuzzy
 msgid "So if you have applications using Quarkus 1.x, please give a try to Quarkus 2.0 and report any issue you could experience on GitHub, be it in terms of bugs, broken compatibility or usability.  We are in this together to build the best Quarkus release ever."
-msgstr ""
+msgstr "Quarkus 1.xを使ったアプリケーションをお持ちの方は、ぜひQuarkus 2.0を試してみてください。また、バグや互換性の低下、使い勝手など、何か問題があればGitHubに報告してください。私たちは、これまでで最高のQuarkusリリースを作るために一緒に取り組んでいます。"
 
 #. type: Title ==
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:25
@@ -75,8 +87,9 @@ msgstr "移行ガイド"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:28
+#, fuzzy
 msgid "We will keep the Migration Guide up to date here: https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.0."
-msgstr ""
+msgstr "マイグレーションガイドは、こちら https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.0 ）で随時更新していきます。"
 
 #. type: Title ==
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:29
@@ -86,8 +99,9 @@ msgstr "ドキュメント"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:33
+#, fuzzy
 msgid "For now, the documentation for our `main` branch is not available on the website yet.  It will be available soon."
-msgstr ""
+msgstr "今のところ、 `main` ブランチのドキュメントは、まだウェブサイトでは公開されていません。近いうちに公開される予定です。"
 
 #. type: Title ==
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:34
@@ -97,95 +111,111 @@ msgstr "変更点"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:39
+#, fuzzy
 msgid "Vert.x is at the core of Quarkus."
-msgstr ""
+msgstr "Vert.xはQuarkusの中核です。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:42
+#, fuzzy
 msgid "Quarkus 2.0 brings Vert.x 4.  You can learn more about it in https://vertx.io/blog/eclipse-vert-x-4-released/[the announcement] and the https://vertx.io/blog/whats-new-in-vert-x-4/[What's new blog post]."
-msgstr ""
+msgstr "Quarkus 2.0はVert.x 4を搭載しています。詳細は link:https://vertx.io/blog/eclipse-vert-x-4-released/[発表文]と link:https://vertx.io/blog/whats-new-in-vert-x-4/[What's newのブログ記事]でご覧いただけます。"
 
 #. type: Title ===
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:43
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Eclipse MicroProfile 4"
-msgstr ""
+msgstr "Eclipse MicroProfile 4"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:46
+#, fuzzy
 msgid "MicroProfile 4 is the latest evolution of the https://github.com/eclipse/microprofile/releases/tag/4.0[MicroProfile specifications]."
-msgstr ""
+msgstr "MicroProfile 4は、 link:https://github.com/eclipse/microprofile/releases/tag/4.0[MicroProfile仕様]の最新版です。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:48
+#, fuzzy
 msgid "All the SmallRye components in Quarkus have been updated to the latest and greatest and, apart from implementing MicroProfile 4, they also come with additional new features."
-msgstr ""
+msgstr "QuarkusのSmallRyeコンポーネントはすべて最新のものにアップデートされており、MicroProfile 4を実装しているだけでなく、追加の新機能も搭載されています。"
 
 #. type: Title ===
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:49
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Continuous Testing"
-msgstr ""
+msgstr "継続的なテスト"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:52
+#, fuzzy
 msgid "I'll let the stage to Stuart Douglas for that one as he's the author of this amazing new feature."
-msgstr ""
+msgstr "この新機能を開発したのはStuart Douglas氏なので、彼にお任せします。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:58
+#, fuzzy
 msgid "This release contains an Alpha implementation of Continuous Testing. This allows tests to be run in development mode, and can be enabled by pressing 'e' in the console (or through the Dev UI). If you enable testing, your test suite will be run once at the start, and then continuous testing will run your tests as you are coding, and tell you if your changes will break any tests. This will give you instant feedback on your changes, without having to switch to a browser. As much as possible we only run tests that are relevant to the code that has been changed."
-msgstr ""
+msgstr "このリリースには、継続的テストのアルファ版の実装が含まれています。これにより、開発モードでもテストを実行できるようになり、コンソールで「e」を押すことで（または Dev UI で）有効にすることができます。テストを有効にすると、テストスイートは最初に一度だけ実行され、その後はコーディング中に継続的テストがテストを実行し、変更によってテストが壊れるかどうかを教えてくれます。これにより、ブラウザに切り替えることなく、変更内容を即座にフィードバックすることができます。可能な限り、変更されたコードに関連するテストのみを実行します。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:60
+#, fuzzy
 msgid "This is an Alpha release and there are some known limitations:"
-msgstr ""
+msgstr "これはアルファリリースであり、いくつかの既知の制限があります。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:62
+#, fuzzy
 msgid "The docs are not done yet (stay tuned for an upcoming blog post)"
-msgstr ""
+msgstr "ドキュメントはまだ完成していません（次回のブログ記事をお楽しみに"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:63
+#, fuzzy
 msgid "The Dev UI view is very basic, it will be improved for the next release"
-msgstr ""
+msgstr "Dev UIビューは非常に基本的なものですが、次のリリースでは改善される予定です。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:64
+#, fuzzy
 msgid "Test fixtures in Gradle don't work properly yet"
-msgstr ""
+msgstr "Gradleのテストフィクスチャがまだ正しく動作しない"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:66
+#, fuzzy
 msgid "This feature has also introduced some changes that may affect your application:"
-msgstr ""
+msgstr "また、この機能にはいくつかの変更点があり、お客様のアプリケーションに影響を与える可能性があります。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:70
+#, fuzzy
 msgid "The Class Loading model for testing is now the same as development mode (as tests need to be hot reloaded), if this causes issues for your application you can set `quarkus.test.flat-class-path=true` to revert to the old model, but it will disable continuous testing."
-msgstr ""
+msgstr "テスト用のクラス・ローディング・モデルは、開発モードと同じになりました（テストはホット・リロードが必要なため）。もしこのモデルがアプリケーションに問題を起こすようであれば、 `quarkus.test.flat-class-path=true` を設定して古いモデルに戻すことができますが、継続的なテストは無効になります。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:73
+#, fuzzy
 msgid "If a compatible terminal is detected Quarkus will display status messages at the bottom of the console window, and react to input without the need to press enter. If this interferes with your application it can be disabled via `quarkus.test.basic-console=true` (note that gradle will always use the basic console at this time)."
-msgstr ""
+msgstr "互換性のある端末が検出された場合、Quarkusはコンソールウィンドウの下部にステータスメッセージを表示し、Enterキーを押すことなく入力に反応します。これがアプリケーションの邪魔になる場合は、 `quarkus.test.basic-console=true` で無効にすることができます（この時点では、gradleは常に基本コンソールを使用することに注意してください）。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:75
+#, fuzzy
 msgid "If you don't want any test output in the console and just want to interact through the Dev UI you can set `quarkus.test.console=false`."
-msgstr ""
+msgstr "コンソールでのテスト出力を必要とせず、開発者用のUIで対話したい場合は、 `quarkus.test.console=false` を設定します。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:78
+#, fuzzy
 msgid "This is an alpha quality feature, so please try it out and if you have any feedback let us know on the mailing list, and file a GitHub issue for any problems you encounter."
-msgstr ""
+msgstr "また、何か問題が発生した場合は、GitHubのIssueを提出してください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:80
+#, fuzzy
 msgid "Here is a video presenting Continuous Testing in motion:"
-msgstr ""
+msgstr "ここでは、継続的テストの動きを紹介するビデオを紹介します。"
 
 #. type: Title ===
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:83
@@ -195,8 +225,9 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:86
+#, fuzzy
 msgid "You can get the full changelogs of https://github.com/quarkusio/quarkus/releases/tag/2.0.0.Alpha1[2.0.0.Alpha1] on GitHub."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.0.0.Alpha1[2.0.0.Alpha1]の完全な変更履歴はGitHubでご覧いただけます。"
 
 #. type: Title ==
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:87
