Add machine translation

--- a/l10n/po/ja_JP/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc.po
@@ -111,19 +111,21 @@ msgstr "変更点"
 
 #. type: Title ===
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:36
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "JDK 11 as minimal version"
-msgstr ""
+msgstr "最小限のバージョンとしてのJDK 11"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:39
+#, fuzzy
 msgid "JDK 11 is the minimal version to use Quarkus 2.0."
-msgstr ""
+msgstr "JDK 11は、Quarkus 2.0を使用するための最小バージョンです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:41
+#, fuzzy
 msgid "JDK 8 is not supported anymore (but you can keep using 1.13.x if you are stuck with it!)."
-msgstr ""
+msgstr "JDK 8はもうサポートされていません（ただし、1.13.xにこだわっている方は使い続けることができます！）。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-22-quarkus-2-0-0-alpha1-released.adoc:45
