Add some translations

--- a/l10n/po/ja_JP/_guides/http-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/http-reference.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-04-05 06:04+0000\n"
-"PO-Revision-Date: 2021-03-19 11:26+0900\n"
+"PO-Revision-Date: 2021-04-24 10:11+0900\n"
 "Last-Translator: Hiroshi Yamanaka <hyamanak@redhat.com>\n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -227,10 +227,8 @@ msgstr "quarkus.http.ssl.certificate.key-store-password=your-password\n"
 
 #. type: Plain text
 #: upstream/_guides/http-reference.adoc:131
-#, fuzzy
-#| msgid "However, instead of providing the password as plain-text in the configuration file (which is considered bad practice), it can instead be supplied (using link:https://microprofile.io/project/eclipse/microprofile-config[MicroProfile config])  as the environment variable `QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_PASSWORD`.  This will also work in tandem with link:https://kubernetes.io/docs/concepts/configuration/secret/#using-secrets-as-environment-variables[Kubernetes secrets]."
 msgid "However, instead of providing the password as plain-text in the configuration file (which is considered bad practice), it can instead be supplied (using link:https://github.com/eclipse/microprofile-config[MicroProfile Config])  as the environment variable `QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_PASSWORD`.  This will also work in tandem with link:https://kubernetes.io/docs/concepts/configuration/secret/#using-secrets-as-environment-variables[Kubernetes secrets]."
-msgstr "しかし、設定ファイルでパスワードをプレーンテキストとして提供する代わりに (これは悪い習慣と考えられています)、環境変数 `QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_PASSWORD` として ( link:https://microprofile.io/project/eclipse/microprofile-config[MicroProfile config を] 使用して) パスワードを提供することができます。これは、 link:https://kubernetes.io/docs/concepts/configuration/secret/#using-secrets-as-environment-variables[Kubernetes の秘密] と連動します。"
+msgstr "しかし、設定ファイルでパスワードをプレーンテキストとして提供する代わりに (これは悪い習慣と考えられています)、環境変数 `QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_PASSWORD` として ( link:https://microprofile.io/project/eclipse/microprofile-config[MicroProfile config を] 使用して) パスワードを提供することができます。これは、 link:https://kubernetes.io/docs/concepts/configuration/secret/#using-secrets-as-environment-variables[Kubernetes secrets] と連動します。"
 
 #. type: Plain text
 #: upstream/_guides/http-reference.adoc:133
