--- a/l10n/po/ja_JP/_guides/funqy-gcp-functions.adoc.po
+++ b/l10n/po/ja_JP/_guides/funqy-gcp-functions.adoc.po
@@ -3,27 +3,27 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-30 14:04+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-04-24 20:30+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/funqy-gcp-functions.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Funqy Google Cloud Functions"
-msgstr "Quarkus - Funqy Google Cloudの機能"
+msgstr "Quarkus - Funqy Google Cloud Functions"
 
 #. type: Plain text
 #: upstream/_guides/funqy-gcp-functions.adoc:12
@@ -55,7 +55,6 @@ msgstr "30分以内"
 
 #. type: Plain text
 #: upstream/_guides/funqy-gcp-functions.adoc:23
-#, fuzzy
 msgid "JDK 11 (Google Cloud Functions requires JDK 11)"
 msgstr "JDK 11 (Google Cloud Functions は JDK 11 が必要です)"
 
@@ -66,19 +65,17 @@ msgstr "Apache Maven {maven-version}"
 
 #. type: Plain text
 #: upstream/_guides/funqy-gcp-functions.adoc:25
-#, fuzzy
 msgid "https://cloud.google.com/[A Google Cloud Account].  Free accounts work."
-msgstr "link:https://cloud.google.com/[Googleクラウドのアカウントです] 。無料アカウントの仕事。"
+msgstr "link:https://cloud.google.com/[Google Cloudのアカウント] 。無料アカウントで大丈夫です。"
 
 #. type: Plain text
 #: upstream/_guides/funqy-gcp-functions.adoc:26
-#, fuzzy
 msgid "https://cloud.google.com/sdk[Cloud SDK CLI Installed]"
-msgstr "link:https://cloud.google.com/sdk[クラウドSDK CLIがインストールされている]"
+msgstr "link:https://cloud.google.com/sdk[Cloud SDK CLIがインストールされていること]"
 
 #. type: Title ==
 #: upstream/_guides/funqy-gcp-functions.adoc:27
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Login to Google Cloud"
 msgstr "Googleクラウドにログイン"
 
@@ -108,7 +105,7 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/funqy-gcp-functions.adoc:43
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "The Quickstart"
 msgstr "クイックスタート"
 
@@ -125,7 +122,7 @@ msgstr "ソリューションは `funqy-google-cloud-functions-quickstart` {quic
 
 #. type: Title ==
 #: upstream/_guides/funqy-gcp-functions.adoc:49
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating the Maven Deployment Project"
 msgstr "Maven デプロイメントプロジェクトの作成"
 
