Add some translations

--- a/l10n/po/ja_JP/_guides/hibernate-search-orm-elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-search-orm-elasticsearch.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-04-02 12:05+0000\n"
-"PO-Revision-Date: 2021-04-08 21:20+0900\n"
+"PO-Revision-Date: 2021-04-25 22:37+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: om\n"
@@ -558,7 +558,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:284
-#, fuzzy
 msgid "Nothing out of the ordinary here: it is just good old Hibernate ORM with Panache operations in a standard JAX-RS service."
 msgstr "ここでは何も特別なことはありません。標準的なJAX-RSサービスでPanache操作を行う古き良きHibernate ORMです。"
 
@@ -570,21 +569,19 @@ msgstr "実際、興味深いのは、フルテキスト検索アプリケーシ
 
 #. type: Title ==
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:287
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Using Hibernate Search annotations"
-msgstr "Hibernate検索アノテーションの使用"
+msgstr "Hibernate Searchアノテーションの使用"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:290
-#, fuzzy
 msgid "Let's go back to our entities."
-msgstr "実体に戻ろう"
+msgstr "エンティティに戻りましょう"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:292
-#, fuzzy
 msgid "Enabling full text search capabilities for them is as simple as adding a few annotations."
-msgstr "フルテキスト検索機能を有効にするには、いくつかの注釈を追加するだけで簡単です。"
+msgstr "フルテキスト検索機能を有効にするには、いくつかのアノテーションを追加するだけで簡単です。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:294
