Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.7/guides/microprofile-graphql.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/microprofile-graphql.adoc.po
@@ -1457,7 +1457,7 @@ msgstr "まとめ"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:791
 msgid "MicroProfile GraphQL enables clients to retrieve the exact data that is required preventing `Over-fetching` and `Under-fetching`."
-msgstr ""
+msgstr "MicroProfile GraphQLを使用すると、クライアントは、必要なデータだけを取得することが出来、`Over-fetching` と `Under-fetching` を防ぐことが出来ます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:794
