--- a/l10n/po/ja_JP/_versions/1.11/guides/funqy-gcp-functions.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/funqy-gcp-functions.adoc.po
@@ -23,7 +23,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/funqy-gcp-functions.adoc:6
 #, no-wrap
 msgid "Quarkus - Funqy Google Cloud Functions"
-msgstr ""
+msgstr "Quarkus - Funqy Google Cloud Functions"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/funqy-gcp-functions.adoc:12
